2002-12-02  Michael Meeks  <michael@ximian.com>

	* Version 2.0.3.3

2002-11-20  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-file-selector-util.c
	(create_bonobo_selector): fix acute brokenness,
	thanks to NotZed.

2002-11-20  hhetter@suse.de

	* bonobo/bonobo-ui-component.c (ui_event),
	(impl_Bonobo_UIComponent_execVerb): 64bit safe
	va-list termination.

2002-11-18  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (cb_do_popup): don't destroy
	popup immediately after popup ;-)

2002-11-11  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-component.c
	(bonobo_ui_component_set_translate): don't
	segv later if we have a NULL / bogus xml
	string coming in.

2002-11-09  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS

2002-11-06  Stanislav Brabec  <sbrabec@suse.cz>

	* samples/controls/Makefile.am,
	samples/compound-doc/bonobo-hello/Makefile.am:
	Fix $(prefix)/lib -> $(libdir).

2002-11-05  Balamurali Viswanathan  <balamurali.viswanathan@wipro.com>

	* bonobo/bonobo-ui-init-gtk.c: Change POPT_ARG_STRING to
	POPT_ARG_INT for the screen argument

2002-10-31  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: require libxml - fixes breakage
	from removing it from bonobo-activation's pkg-config
	requirements.

2002-10-22  Gustavo Carneiro  <gjc@inescporto.pt>

	* doc/ui-faq.txt: add item.

2002-10-18  Michael Meeks  <michael@ximian.com>

	* Version 2.0.3.2

2002-10-17  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar.c (impl_finalize),
	(impl_dispose): unlink widgets we destroy,
	don't free the list until here - otherwise
	we can't remove any widgets as we chain to
	parent (doh) - thanks Jaka / Satyajit

2002-10-08  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar-button-item.c
	(set_label): re-write for Morten to make
	it substantially more efficient.

2002-10-01  Michael Meeks  <michael@ximian.com>

	* Version 2.0.3.1

2002-10-01  Michael Meeks  <michael@ximian.com>
